syntax = "proto3";

package faker;

option go_package = "proto;faker";

service Faker {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc FakeAddress(FakeSeed) returns (FakeAddressResponse) {}
}

message FakeSeed {
	int64 seed = 1;
}

message FakeAddressResponse {
	string city = 1;
	string streetName = 2;                  // => "Buckridge Lakes"
	string streetAddress = 3;               // => "586 Sylvester Turnpike"
	string secondaryAddress = 4;            // => "Apt. 411"
	string buildingNumber = 5;             // => "754"
	string postcode = 6;                    // => "31340"
}
message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
